# fastApi

./: main.py  pyproject.toml  req.txt
alembic/versions/: 2025_03_09_1630-9511485b4f29_create_products_table.py  2025_03_09_2202-b99eddf9c0d0_create_user_table.py  2025_03_11_0027-9819200c13e2_create_product_and_user_table.py  2025_03_17_2138-b62bcd62436a_create_category_table.py  2025_03_18_1213-7b316a5bfd47_created_image_table_created_.py  2025_03_18_1339-5aff598b7893_recrating_tables.py
api_v1/: __init__.py
api_v1/cart/: crud.py  views.py
api_v1/category/: crud.py  schemas.py  views.py
api_v1/images/: schemas.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
api_v1/users/: crud.py  schemas.py  views.py
app/: main.py
app/api_v1/products/: crud.py  views.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  product.py
core/: config.py
core/models/: __init__.py  base.py  cart.py  category.py  db_helper.py  image.py  product.py  user.py
core/services/: dependencies.py
core/services/auth/: helpers.py  utils.py  validation.py
core/services/shared/: dependencies.py
