[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"  # Используйте актуальную версию Python
uvicorn = {extras = ["standart"], version = "^0.34.0"}
fastapi = "^0.115.8"
black = "^25.1.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
