[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
fastapi = "^0.115.8"
black = "^25.1.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
pydantic-settings = "^2.8.1"
aisqlite = "^1.1.0"
aiosqlite = "^0.21.0"
alembic = "^1.15.1"
passlib = "^1.7.4"
python-jose = "^3.4.0"
bcrypt = "^4.3.0"
jwt = "^1.3.1"
